--- a/shared/pages/Home/Orders/MyOrders/RowFeeds/RowFeeds.scss
+++ b/shared/pages/Home/Orders/MyOrders/RowFeeds/RowFeeds.scss
@@ -65,6 +65,7 @@ td {
   width: 25px;
   border: 1px solid #0004;
   border-radius: 50%;
+  background-color: #aaa2;
   cursor: pointer;
   position: relative;
 }
